--- a/doc/USER_MANUAL/09_noise_simulations.tex
+++ b/doc/USER_MANUAL/09_noise_simulations.tex
@@ -103,8 +103,8 @@ make xspecfem3D
 statistics, e.g., the ensemble-averaged noise spectrum. Matlab scripts
 are provided to help you to generate the necessary file:
 \begin{verbatim}
-EXAMPLES/noise_tomography/NOISE_TOMOGRAPHY.m  (main program)
-EXAMPLES/noise_tomography/PetersonNoiseModel.m
+EXAMPLES/applications/noise_tomography/NOISE_TOMOGRAPHY.m  (main program)
+EXAMPLES/applications/noise_tomography/PetersonNoiseModel.m
 \end{verbatim}
 
 In Matlab, simply run:
@@ -271,7 +271,7 @@ given in \citet{trompetal2010}.
 \section{Example}
 
 In order to illustrate noise simulations in an easy way, one example
-is provided in \texttt{EXAMPLES/noise\_tomography/}. See \texttt{EXAMPLES/noise\_tomography/README}
+is provided in \texttt{EXAMPLES/applications/noise\_tomography/}. See \texttt{EXAMPLES/applications/noise\_tomography/README}
 for explanations. \newline
 
 
@@ -279,7 +279,7 @@ Note, however, that they are created for a specific workstation (CLOVER@PRINCETO
 which has at least 4 cores with `mpif90' working properly. \newline
 
 
-If your workstation is suitable, you can run the example in \texttt{EXAMPLES/noise\_tomography/}
+If your workstation is suitable, you can run the example in \texttt{EXAMPLES/applications/noise\_tomography/}
 using:\newline
 
 \texttt{./pre-processing.sh}\newline
