--- a/doc/USER_MANUAL/12_running_scheduler.tex
+++ b/doc/USER_MANUAL/12_running_scheduler.tex
@@ -23,7 +23,7 @@ advantage of this property, care needs to be taken that output and
 intermediate files from separate jobs do not overwrite each other,
 or otherwise interfere with other running jobs.
 \end{itemize}
-Examples of job scripts can be found in the \texttt{\small utils/Cluster/}{\small{}
+Examples of job scripts can be found in the \texttt{\small utils/scripts/Cluster/}{\small{}
 directory and can straightforwardly be modified and adapted to meet
 more specific running needs.}{\small \par}
 
