--- a/doc/USER_MANUAL/15_informations_for_developers.tex
+++ b/doc/USER_MANUAL/15_informations_for_developers.tex
@@ -1,10 +1,11 @@
 
-\chapter{Information for developers of the code, and for people who want to learn how the technique works}\label{cha:developers}
+\chapter{Information for developers of the code}\label{cha:developers}
 
 You can get a very simple 1D version of a demo code (there is one in Fortran and one in Python):
 \begin{verbatim}
 git clone --recursive https://github.com/SPECFEM/specfem1d.git
 \end{verbatim}
+This is helpful for everyone who wants to learn how the spectral-element method technique works.\newline
 
 
 \noindent
