--- a/doc/USER_MANUAL/C_troubleshooting.tex
+++ b/doc/USER_MANUAL/C_troubleshooting.tex
@@ -50,7 +50,7 @@ fix: e.g. specify > ./configure FC=gfortran MPIF90=/usr/local/openmpi-gfortran/b
 
 \item [{after executing \texttt{xmeshfem3D} I've got elements with skewness of 81\% percent, what does this mean:}] Look
 at the skewness table printed in the \texttt{output\_mesher.txt} file
-after executing \texttt{xmeshfem3D} for the example given in \texttt{EXAMPLES/meshfem3D\_examples/simple\_model/}:
+after executing \texttt{xmeshfem3D} for the example given in \texttt{EXAMPLES/applications/meshfem3D\_examples/simple\_model/}:
 
 {\footnotesize
 \begin{verbatim}
@@ -104,14 +104,14 @@ are tolerable, above that you should consider remeshing...\newline
 
 To give you an idea why some of the elements are distorted, see the
 following figure \ref{fig:mesh.vp} of the mesh you obtain in the
-example \texttt{EXAMPLES/meshfem3D\_examples/simple\_model/}.
+example \texttt{EXAMPLES/applications/meshfem3D\_examples/simple\_model/}.
 \begin{figure}[htbp]
 \noindent \begin{centering}
 \includegraphics[width=0.9\textwidth]{figures/mesh_vp.jpg}
 \par\end{centering}
 
 \caption{Paraview visualization using the mesh vtk-files for the example given
-in \texttt{EXAMPLES/meshfem3D\_examples/simple\_model/}.}
+in \texttt{EXAMPLES/applications/meshfem3D\_examples/simple\_model/}.}
 
 
 \label{fig:mesh.vp}
