--- a/doc/USER_MANUAL/bibliography.bib
+++ b/doc/USER_MANUAL/bibliography.bib
@@ -16463,6 +16463,26 @@
   Publisher                = {IEEE Computer Society Press}
 }
 
+@Article{Rietmann2016,  
+  Title                    = {Newmark local time stepping on high-performance computing architectures},
+  Author                   = {Rietmann, Max and Grote, M. and Peter, D. and Schenk, O.},
+  Journal                  = {J. Comput. Phys},
+  Year                     = {2016},
+  Pages                    = {308-326}, 
+  Volume                   = {334}
+}
+
+@InProceedings{Rietmann2015,
+  Title                    = {Load-Balanced Local Time Stepping for Large-Scale Wave Propagation},
+  Author                   = {Rietmann, Max and Peter, D. and Schenk, O. and Ucar, B. and Grote, M.},
+  Booktitle                = {29th IEEE International Parallel \& Distributed Processing Symposium (IPDPS)},
+  Year                     = {2015},
+  Address                  = {Hyderabad, India},
+  Month                    = may,
+  Pages                    = {925-935},
+  Publisher                = {IEEE CPS}
+}
+
 @PhdThesis{Rio97,
   Title                    = {Simulation num\'erique de la propagation d'ondes sismiques en milieu fractur\'e ({N}umerical simulation of wave propagation in media with cracks)},
   Author                   = {Bruno Riollet},
