--- a/doc/USER_MANUAL/features.tex
+++ b/doc/USER_MANUAL/features.tex
@@ -35,6 +35,7 @@ CUDA and HIP hardware support, respectively.
                         & C-PML                             & X  & -  & - \\
                         & Simultaneous runs                 & X  & X  & X \\
                         & ADIOS file I/O                    & X  & X  & X \\
+                        & HDF5 file I/O                     & X  & X  & X \\
                         & FWI framework                     & X  & X  & X \\
 
 \hline
@@ -59,6 +60,7 @@ CUDA and HIP hardware support, respectively.
 %%
 {\bf Time schemes}  & Newmark   & X  & X  & X  \\
                     & LDDRK     & X  & -  & -  \\
+                    & local-time stepping (LTS) & X  & -  & -  \\
 \hline
 & & & & \\
 %%
@@ -72,6 +74,7 @@ CUDA and HIP hardware support, respectively.
 {\bf Seismogram formats}  & Ascii          & X  & X  & X \\
                           & SU             & X  & X  & X \\
                           & ASDF           & X  & X  & X \\
+                          & HDF5           & X  & X  & X \\
                           & Binary         & X  & X  & X \\
                           & down-sampling  & X  & X  & X \\
 %
