updates manual pdf

--- a/doc/USER_MANUAL/bibliography.bib
+++ b/doc/USER_MANUAL/bibliography.bib
@@ -13621,6 +13621,14 @@
   Volume                   = {166}
 }
 
+@article{Meschede2011,
+        author = {Meschede, M.A. and C.L. Myhrvold and J. Tromp},
+        journal = gji,
+        pages = {529-537},
+        title = {Antipodal focusing of seismic waves due to large meteorite impacts on Earth},
+        volume = {187},
+        year = {2011}}
+
 @Article{Merkel07,
   Title                    = {Deformation of ({M}g,{F}e){S}i{O}3 post-perovskite and {D}'' anisotropy},
   Author                   = {Merkel, S. and A. K. McNamara and A. Kubo and S. Speziale and L. Miyagi and Y. Meng and T. S. Duffy and H. R. Wenk},
