--- a/doc/USER_MANUAL/authors.tex
+++ b/doc/USER_MANUAL/authors.tex
@@ -62,6 +62,7 @@ Peter Messmer,
 David Mich\'ea,
 Ryan Modrak,
 Vadim Monteiller,
+Christina Morency,
 Surendra Nadh Somala,
 Masaru Nagaso,
 Tarje Nissen-Meyer,
